# meridianiq

./: .env.example  .gitignore  .gitleaks.toml  ACKNOWLEDGMENTS.md  ANONYMIZATION_RULES.md  ATTRIBUTION.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LESSONS_LEARNED.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  docker-compose.yml  fly.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-reviewer.md  devils-advocate.md  frontend-ux-reviewer.md  investor-view.md  legal-and-accountability.md  product-validator.md  strategist.md
.claude/commands/: fix-issue.md  qa-checkpoint.md  release.md  sync-docs.md  verify.md
.claude/rules/: backend.md  frontend.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  doc-sync-check.yml  gitleaks.yml
.wrangler/cache/: pages.json  wrangler-account.json
docs/: DEPLOY_CHECKLIST.md  GAP_ASSESSMENT_v3.3.md  LESSONS_LEARNED.md  ROADMAP.md  SCHEDULE_SUBMISSION_STANDARDS.md  SCHEDULE_VIEWER_ROADMAP.md  api-reference.md  architecture.md  business-case.md  evolution.md  mcp-tools.md  methodologies.md  v2-roadmap.md  xer-format-reference.md
docs/adr/: 0000-record-architecture-decisions.md  0001-fastapi-for-backend.md  0002-sveltekit-for-frontend.md  0003-supabase-for-auth-db-storage.md  0004-flyio-for-backend-hosting.md  0005-es256-jwt-algorithm.md  0006-plugin-architecture.md  0007-websocket-progress-streaming.md  0008-mcp-http-sse-transport.md  0009-cycle1-lifecycle-intelligence.md  0009-w4-outcome.md  0012-schedule-persistence-atomicity.md  0013-websocket-progress-hardening.md  0014-derived-artifact-provenance-hash.md  0015-async-materialization-state-machine.md  0016-lifecycle-phase-inference.md  0017-deduplicate-api-keys-migration.md  0018-cycle-cadence-doc-artifacts.md  0019-cycle-2-entry-consolidation-primitive.md  0020-calibration-harness-primitive.md  0021-cycle-3-entry-floor-plus-field-shallow.md  0022-cycle-4-entry-beta-honest.md  0023-cycle-4-w4-outcome.md  0024-cycle-5-entry-z-shape-consolidation.md  0025-cycle-6-entry-h-shape.md  README.md
docs/archive/: v1-architecture.md
docs/audit/: 01-critical-findings.md  02-architecture.md  03-schema.md  04-security.md  05-ux-frontend.md  06-planned-vs-implemented.md  CLOSING_REPORT.md  HANDOFF.md  README.md
docs/calibration/: lifecycle-phase-w4-postmortem.md  revision_trends_w4_manifest.json  revision_trends_w4_public.json
docs/operator-runbooks/: cycle3.md  cycle4.md  cycle5.md  cycle6.md
docs/user-guide/: README.md  analysis-workflow.md  bi-dashboards.md  cost-integration.md  getting-started.md  mcp-integration.md  schedule-viewer.md  submission-deliverables.md
docs/v06-planning/: DISCOVERY_REVIEW.md  ROADMAP_v06_to_v20.md
docs/v08-planning/: DISCOVERY.md
docs/v2-definition/: MVP_DEFINITION.md
docs/v2-discovery/: CLAUDE_ATTRIBUTION.md  DISCOVERY_STATUS.md  GAP_ASSESSMENT.md
samples/bi-templates/: README.md
samples/plugin-example/: README.md  pyproject.toml
samples/plugin-example/meridianiq_plugin_example/: __init__.py  engine.py
scripts/: README.md  check_stats_consistency.py  generate_api_reference.py  generate_mcp_catalog.py  generate_methodology_catalog.py
scripts/calibration/: __init__.py  run_w4_calibration.py
src/: __about__.py  __init__.py  mcp_server.py
src/analytics/: __init__.py  aia_g702.py  aia_g703.py  anomaly_detection.py  benchmark_priors.py  benchmarks.py  calendar_validation.py  cashflow.py  comparison.py  contract.py  cost_integration.py  cpm.py  dcma14.py  delay_attribution.py  delay_prediction.py  duration_prediction.py  early_warning.py  evm.py  evolution_optimizer.py  float_trends.py  forensics.py  half_step.py  health_score.py  ips_reconciliation.py  lifecycle_phase.py  lifecycle_types.py  lookahead.py  mip_additive.py  mip_observational.py  mip_subtractive.py  narrative_report.py  nlp_query.py  pareto.py  recovery_validation.py  report_generator.py  resource_leveling.py  revision_trends.py  risk.py  risk_register.py  root_cause.py  (+9 more)
src/api/: __init__.py  app.py  auth.py  cache.py  deps.py  kpi_helpers.py  observability.py  organizations.py  progress.py  revision_detection.py  schemas.py  storage.py
src/database/: __init__.py  canonical_hash.py  client.py  config.py  store.py
src/export/: xer_writer.py
src/integrations/: __init__.py  base.py  ebuilder.py  ineight.py  kahua.py  manual.py  primavera_unifier.py  procore.py  sap_ps.py
src/materializer/: __init__.py  backfill.py  runtime.py
src/parser/: __init__.py  calendar_data.py  models.py  msp_reader.py  validator.py  xer_reader.py
src/plugins/: __init__.py
supabase/migrations/: 001_initial_schema.sql  002_auth_rls.sql  003_intelligence.sql  004_storage_refactor.sql  005_programs_table.sql  006_cleanup_orphan_uploads.sql  007_organizations.sql  008_value_milestones.sql  (+21 more)
tests/: conftest.py  test_activity_search.py  test_aia_g702.py  test_aia_g703.py  test_anomaly_detection.py  test_api.py  test_api_cache.py  test_api_keys_fail_closed.py  test_api_keys_schema.py  test_audit_trail_ip.py  test_auth.py  test_backfill_cli.py  test_benchmark_priors.py  test_benchmarks.py  test_bi_connector.py  test_bi_templates.py  test_cache_hygiene.py  test_calendar_data.py  test_calibration_harness.py  test_canonical_hash.py  test_check_stats_consistency.py  test_comparison.py  test_contract.py  test_cors_config.py  test_cost_integration.py  test_cpm.py  test_dashboard_api.py  test_dcma14.py  test_delay_prediction.py  test_duration_prediction.py  test_early_warning.py  test_engine_version_source.py  test_erp_adapters.py  test_evm.py  test_evm_api.py  test_evolution_optimizer.py  test_export.py  test_float_trends.py  test_forensic_api.py  test_forensics.py  (+66 more)
tools/: __init__.py  calibration_harness.py
v1-compare/: README.md
v1-program-schedule/: README.md
v1-reader/: UPSTREAM_DIFF.md
web/: Dockerfile  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vitest.config.ts
xer-samples/: README.md
(+205 files in other folders)
