[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridianiq"
version = "4.0.2"
description = "The intelligence standard for project schedules — open-source schedule intelligence from validation to prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Vitor Maia Rodovalho", email = "vitor.rodovalho@outlook.com"},
]
keywords = ["primavera", "p6", "xer", "schedule", "cpm", "construction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Upper bound pinned per ADR-0015 P2#9 (Wave 1 devils-advocate
    # follow-up): a silent 2.x-minor ``model_dump`` change would shift the
    # ADR-0014 byte-exact input_hash pins. Lock the minor range until a
    # conscious bump is audited against the pinned fixtures.
    # Floor bumped 2026-04-26: pydantic 2.13 audited against
    # tests/test_canonical_hash.py::TestByteExactPin (both minimal + rich
    # fixtures held). Safe within 2.x.
    "pydantic>=2.13,<3.0",
    "networkx>=3.6",
    "numpy>=2.4",
    "supabase>=2.29",
    "python-dotenv>=1.0",
    "python-multipart",
    "sentry-sdk[fastapi]>=2.58",
    "PyJWT[crypto]>=2.12",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
api = ["fastapi>=0.136", "uvicorn[standard]>=0.46", "slowapi>=0.1.9"]
export = ["pandas>=2.2", "openpyxl>=3.1"]
reports = ["weasyprint>=62.0"]
ai = ["anthropic>=0.97"]
ml = ["scikit-learn>=1.8"]
mcp = ["mcp>=1.20"]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1", "ruff>=0.15.12", "mypy>=1.20", "httpx>=0.27", "slowapi>=0.1.9"]
all = ["meridianiq[api,export,reports,ai,ml,mcp,dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.14"
strict = true
