[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridianiq"
version = "4.3.0"
description = "The intelligence standard for project schedules — open-source schedule intelligence from validation to prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Vitor Maia Rodovalho", email = "vitor.rodovalho@outlook.com"},
]
keywords = ["primavera", "p6", "xer", "schedule", "cpm", "construction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Upper bound pinned per ADR-0015 P2#9 (Wave 1 devils-advocate
    # follow-up): a silent 2.x-minor ``model_dump`` change would shift the
    # ADR-0014 byte-exact input_hash pins. Lock the minor range until a
    # conscious bump is audited against the pinned fixtures.
    # Floor bumped 2026-04-26: pydantic 2.13 audited against
    # tests/test_canonical_hash.py::TestByteExactPin (both minimal + rich
    # fixtures held). Safe within 2.x.
    # Floor bumped 2026-05-17 (Cycle 6 W1 Bucket B): pydantic 2.13.4
    # re-audited against TestByteExactPin + TestDeterminism + TestProjectScoping
    # + TestContentSensitivity + TestChainFilters + TestCanonicalJsonRules
    # (28/28 pass). No RootModel usage in src/ → 2.13.4 RootModel core-metadata
    # change is moot. Safe within 2.13.x.
    "pydantic>=2.13.4,<3.0",
    "networkx>=3.6",
    "numpy>=2.4",
    "supabase>=2.30",
    "python-dotenv>=1.2",
    "python-multipart",
    "sentry-sdk[fastapi]>=2.59",
    "PyJWT[crypto]>=2.12.1",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
api = ["fastapi>=0.136.1", "uvicorn[standard]>=0.46", "slowapi>=0.1.9", "psutil>=5.9"]
export = ["pandas>=2.2", "openpyxl>=3.1"]
reports = ["weasyprint>=68.0"]
ai = ["anthropic>=0.100"]
ml = ["scikit-learn>=1.8"]
# Upper bound `<2` per Cycle 6 W1 Bucket B (ADR-0025): the mcp SDK v2
# replaces the ``FastMCP`` API used at ``src/mcp_server.py:61`` with
# ``McpServer`` (breaking change).  Cap at 1.x until a conscious v2
# migration ADR lands.  Patch floor 1.27.1 picks up upstream fixes
# without leaving the audited 1.x line.
mcp = ["mcp>=1.27.1,<2"]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1",
    "ruff>=0.15.12",
    "mypy>=1.20",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "psutil>=5.9",
    # Type stubs (Cycle 5 W4 hygiene). Reduces mypy --strict noise from
    # untyped third-party imports without per-module ``# type: ignore``
    # suppression.
    "types-networkx>=3.6.1.20260508",
    "types-openpyxl>=3.1.5.20260508",
    "types-defusedxml>=0.7.0.20260504",
]
all = ["meridianiq[api,export,reports,ai,ml,mcp,dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.14"
strict = true
