[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridianiq-plugin-example"
version = "0.1.0"
description = "Reference plugin showing how to extend MeridianIQ with custom analysis engines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[project.entry-points."meridianiq.engines"]
activity-counter = "meridianiq_plugin_example.engine:ActivityCounterEngine"

[tool.hatch.build.targets.wheel]
packages = ["meridianiq_plugin_example"]
